Jaar 2/Compilers en operating systems/Compiler/DutchJava/gen/DutchJavaParser.java
// Generated from D:/School/kwartiel 3/Compilers en operating systems/DutchJava2\DutchJava.g4 by ANTLR 4.7

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DutchJavaParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, OF = 14, EN = 15, GELIJKAAN = 16, NIETGELIJKAAN = 17,
            GROTERDAN = 18, KLEINERDAN = 19, GROTERGELIJK = 20, KLEINERGELIJK = 21, MINUS = 22,
            PLUS = 23, KEER = 24, GEDEELDDOOR = 25, MODULO = 26, PLUSIS = 27, MINIS = 28, KEERIS = 29,
            GEDEELDDOORIS = 30, SEMICOL = 31, KENTOE = 32, HAAKOPEN = 33, HAAKSLUIT = 34, GEEFTERUG = 35,
            DATATYPE = 36, INT = 37, FLOAT = 38, BOOLEAN = 39, STRING = 40, ID = 41, COMMENT = 42,
            SPACE = 43;
    public static final int
            RULE_parse = 0, RULE_blok = 1, RULE_statement = 2, RULE_read_statement = 3,
            RULE_print_statement = 4, RULE_als_statement = 5, RULE_zolang_statement = 6,
            RULE_voor_statement = 7, RULE_declarering = 8, RULE_toekenning = 9, RULE_toekenningWithMethod = 10,
            RULE_verandering = 11, RULE_veranderingWithMethod = 12, RULE_conditie_block = 13,
            RULE_stat_blok = 14, RULE_func_stat_blok = 15, RULE_methodeAANROEP = 16,
            RULE_methodeUITVOERING = 17, RULE_argument = 18, RULE_argument_uitvoering = 19,
            RULE_argument_type = 20, RULE_expressie = 21, RULE_value_expressie = 22,
            RULE_atom = 23;
    public static final String[] ruleNames = {
            "parse", "blok", "statement", "read_statement", "print_statement", "als_statement",
            "zolang_statement", "voor_statement", "declarering", "toekenning", "toekenningWithMethod",
            "verandering", "veranderingWithMethod", "conditie_block", "stat_blok",
            "func_stat_blok", "methodeAANROEP", "methodeUITVOERING", "argument", "argument_uitvoering",
            "argument_type", "expressie", "value_expressie", "atom"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'< ('", "'schrijf '", "'als'", "'alsanders'", "'anders'", "'zolang'",
            "'voor'", "'{'", "'}'", "'functie'", "','", "'--'", "'++'", null, null,
            "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'-'", "'+'", "'*'", "'/'",
            "'%'", null, null, null, null, "';'", null, "'('", "')'", "'geefterug'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, "OF", "EN", "GELIJKAAN", "NIETGELIJKAAN", "GROTERDAN", "KLEINERDAN",
            "GROTERGELIJK", "KLEINERGELIJK", "MINUS", "PLUS", "KEER", "GEDEELDDOOR",
            "MODULO", "PLUSIS", "MINIS", "KEERIS", "GEDEELDDOORIS", "SEMICOL", "KENTOE",
            "HAAKOPEN", "HAAKSLUIT", "GEEFTERUG", "DATATYPE", "INT", "FLOAT", "BOOLEAN",
            "STRING", "ID", "COMMENT", "SPACE"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public DutchJavaParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "DutchJava.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ParseContext parse() throws RecognitionException {
        ParseContext _localctx = new ParseContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_parse);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(51);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(48);
                                methodeUITVOERING();
                            }
                        }
                    }
                    setState(53);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
                setState(54);
                blok();
                setState(55);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlokContext blok() throws RecognitionException {
        BlokContext _localctx = new BlokContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_blok);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(57);
                                statement();
                            }
                        }
                    }
                    setState(62);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_statement);
        try {
            setState(77);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(63);
                    read_statement();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(64);
                    declarering();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(65);
                    print_statement();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(66);
                    als_statement();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(67);
                    voor_statement();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(68);
                    zolang_statement();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(69);
                    methodeAANROEP();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(70);
                    toekenning();
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(71);
                    toekenningWithMethod();
                }
                break;
                case 10:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(72);
                    verandering();
                }
                break;
                case 11:
                    enterOuterAlt(_localctx, 11);
                {
                    setState(73);
                    veranderingWithMethod();
                }
                break;
                case 12:
                    enterOuterAlt(_localctx, 12);
                {
                    setState(74);
                    value_expressie(0);
                    setState(75);
                    match(SEMICOL);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Read_statementContext read_statement() throws RecognitionException {
        Read_statementContext _localctx = new Read_statementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_read_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(ID);
                setState(80);
                match(T__0);
                setState(81);
                match(DATATYPE);
                setState(82);
                match(HAAKSLUIT);
                setState(83);
                match(SEMICOL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Print_statementContext print_statement() throws RecognitionException {
        Print_statementContext _localctx = new Print_statementContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_print_statement);
        try {
            setState(99);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    _localctx = new SchrijfIdContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(85);
                    match(T__1);
                    setState(86);
                    match(ID);
                    setState(87);
                    match(SEMICOL);
                }
                break;
                case 2:
                    _localctx = new SchrijfStringContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(88);
                    match(T__1);
                    setState(89);
                    match(STRING);
                    setState(90);
                    match(SEMICOL);
                }
                break;
                case 3:
                    _localctx = new SchrijfValExprContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(91);
                    match(T__1);
                    setState(92);
                    value_expressie(0);
                    setState(93);
                    match(SEMICOL);
                }
                break;
                case 4:
                    _localctx = new SchrijfExprContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(95);
                    match(T__1);
                    setState(96);
                    expressie(0);
                    setState(97);
                    match(SEMICOL);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Als_statementContext als_statement() throws RecognitionException {
        Als_statementContext _localctx = new Als_statementContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_als_statement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101);
                match(T__2);
                setState(102);
                ((Als_statementContext) _localctx).cond_block = conditie_block();
                setState(107);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__3) {
                    {
                        {
                            setState(103);
                            match(T__3);
                            setState(104);
                            conditie_block();
                        }
                    }
                    setState(109);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(112);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__4) {
                    {
                        setState(110);
                        match(T__4);
                        setState(111);
                        stat_blok();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Zolang_statementContext zolang_statement() throws RecognitionException {
        Zolang_statementContext _localctx = new Zolang_statementContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_zolang_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(114);
                match(T__5);
                setState(115);
                expressie(0);
                setState(116);
                stat_blok();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Voor_statementContext voor_statement() throws RecognitionException {
        Voor_statementContext _localctx = new Voor_statementContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_voor_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                match(T__6);
                {
                    setState(119);
                    match(HAAKOPEN);
                    setState(122);
                    _errHandler.sync(this);
                    switch (_input.LA(1)) {
                        case DATATYPE: {
                            setState(120);
                            ((Voor_statementContext) _localctx).toek = toekenning();
                        }
                        break;
                        case ID: {
                            setState(121);
                            ((Voor_statementContext) _localctx).verand = verandering();
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(124);
                    expressie(0);
                    setState(125);
                    match(SEMICOL);
                    setState(126);
                    value_expressie(0);
                    setState(127);
                    match(HAAKSLUIT);
                }
                setState(129);
                stat_blok();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeclareringContext declarering() throws RecognitionException {
        DeclareringContext _localctx = new DeclareringContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_declarering);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                match(DATATYPE);
                setState(132);
                match(ID);
                setState(133);
                match(SEMICOL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ToekenningContext toekenning() throws RecognitionException {
        ToekenningContext _localctx = new ToekenningContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_toekenning);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135);
                match(DATATYPE);
                setState(136);
                match(ID);
                setState(137);
                match(KENTOE);
                setState(138);
                ((ToekenningContext) _localctx).expr = value_expressie(0);
                setState(139);
                match(SEMICOL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ToekenningWithMethodContext toekenningWithMethod() throws RecognitionException {
        ToekenningWithMethodContext _localctx = new ToekenningWithMethodContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_toekenningWithMethod);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(141);
                match(DATATYPE);
                setState(142);
                match(ID);
                setState(143);
                match(KENTOE);
                setState(144);
                ((ToekenningWithMethodContext) _localctx).expr = methodeAANROEP();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VeranderingContext verandering() throws RecognitionException {
        VeranderingContext _localctx = new VeranderingContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_verandering);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(146);
                ((VeranderingContext) _localctx).id = match(ID);
                setState(147);
                match(KENTOE);
                setState(148);
                ((VeranderingContext) _localctx).expr = value_expressie(0);
                setState(149);
                match(SEMICOL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VeranderingWithMethodContext veranderingWithMethod() throws RecognitionException {
        VeranderingWithMethodContext _localctx = new VeranderingWithMethodContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_veranderingWithMethod);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(151);
                ((VeranderingWithMethodContext) _localctx).id = match(ID);
                setState(152);
                match(KENTOE);
                setState(153);
                ((VeranderingWithMethodContext) _localctx).expr = methodeAANROEP();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Conditie_blockContext conditie_block() throws RecognitionException {
        Conditie_blockContext _localctx = new Conditie_blockContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_conditie_block);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(155);
                ((Conditie_blockContext) _localctx).expr = expressie(0);
                setState(156);
                ((Conditie_blockContext) _localctx).sBlock = stat_blok();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Stat_blokContext stat_blok() throws RecognitionException {
        Stat_blokContext _localctx = new Stat_blokContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_stat_blok);
        try {
            _localctx = new StatementBlokContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(158);
                match(T__7);
                setState(159);
                blok();
                setState(160);
                match(T__8);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Func_stat_blokContext func_stat_blok() throws RecognitionException {
        Func_stat_blokContext _localctx = new Func_stat_blokContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_func_stat_blok);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(162);
                match(T__7);
                setState(163);
                blok();
                setState(165);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == GEEFTERUG) {
                    {
                        setState(164);
                        match(GEEFTERUG);
                    }
                }

                setState(168);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ID) {
                    {
                        setState(167);
                        match(ID);
                    }
                }

                setState(171);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SEMICOL) {
                    {
                        setState(170);
                        match(SEMICOL);
                    }
                }

                setState(173);
                match(T__8);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MethodeAANROEPContext methodeAANROEP() throws RecognitionException {
        MethodeAANROEPContext _localctx = new MethodeAANROEPContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_methodeAANROEP);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(175);
                match(ID);
                setState(176);
                match(HAAKOPEN);
                setState(178);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING) | (1L << ID))) != 0)) {
                    {
                        setState(177);
                        argument();
                    }
                }

                setState(180);
                match(HAAKSLUIT);
                setState(181);
                match(SEMICOL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MethodeUITVOERINGContext methodeUITVOERING() throws RecognitionException {
        MethodeUITVOERINGContext _localctx = new MethodeUITVOERINGContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_methodeUITVOERING);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(183);
                match(DATATYPE);
                setState(184);
                match(T__9);
                setState(185);
                match(ID);
                setState(186);
                match(HAAKOPEN);
                setState(188);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == DATATYPE) {
                    {
                        setState(187);
                        argument_uitvoering();
                    }
                }

                setState(190);
                match(HAAKSLUIT);
                setState(191);
                func_stat_blok();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ArgumentContext argument() throws RecognitionException {
        ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_argument);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(198);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(193);
                                argument_type();
                                setState(194);
                                match(T__10);
                            }
                        }
                    }
                    setState(200);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                }
                setState(201);
                argument_type();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Argument_uitvoeringContext argument_uitvoering() throws RecognitionException {
        Argument_uitvoeringContext _localctx = new Argument_uitvoeringContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_argument_uitvoering);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(209);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(203);
                                match(DATATYPE);
                                setState(204);
                                argument_type();
                                setState(205);
                                match(T__10);
                            }
                        }
                    }
                    setState(211);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
                }
                setState(212);
                match(DATATYPE);
                setState(213);
                argument_type();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Argument_typeContext argument_type() throws RecognitionException {
        Argument_typeContext _localctx = new Argument_typeContext(_ctx, getState());
        enterRule(_localctx, 40, RULE_argument_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(215);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING) | (1L << ID))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressieContext expressie() throws RecognitionException {
        return expressie(0);
    }

    private ExpressieContext expressie(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpressieContext _localctx = new ExpressieContext(_ctx, _parentState);
        ExpressieContext _prevctx = _localctx;
        int _startState = 42;
        enterRecursionRule(_localctx, 42, RULE_expressie, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new AtomCondExprContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;
